--- a/package.json
+++ b/package.json
@@ -14,20 +14,30 @@
         "format:fix": "prettier src --write"
     },
     "devDependencies": {
+        "@headlessui/react": "^1.4.2",
         "@rollup/plugin-node-resolve": "^13.0.6",
         "@rollup/plugin-typescript": "^8.3.0",
+        "@types/lodash": "^4.14.177",
         "@types/react": "^17.0.37",
         "@types/react-dom": "^17.0.11",
+        "@types/react-modal": "^3.13.1",
         "@types/tampermonkey": "^4.0.5",
         "@typescript-eslint/eslint-plugin": "^5.4.0",
+        "@typescript-eslint/parser": "^5.4.0",
         "eslint": "^8.3.0",
+        "eslint-config-prettier": "^8.3.0",
         "eslint-plugin-react": "^7.27.1",
         "npm-run-all": "^4.1.5",
         "prettier": "^2.5.0",
+        "prettier-plugin-tailwind": "^2.2.12",
+        "react-hook-form": "^7.20.4",
         "rollup": "^2.60.1",
         "rollup-plugin-userscript": "^0.1.1",
         "serve": "^13.0.2",
+        "stylelint": "^14.1.0",
+        "tailwindcss": "^2.2.19",
         "tslib": "^2.3.1",
         "typescript": "^4.5.2"
-    }
+    },
+    "dependencies": {}
 }
