--- a/.eslintrc
+++ b/.eslintrc
@@ -7,6 +7,8 @@
     ],
     "rules": {
         "no-console": "error",
-        "react/react-in-jsx-scope":"off"
+        "react/react-in-jsx-scope": "off",
+        "react/prop-types": "off",
+        "@typescript-eslint/ban-ts-comment": "off"
     }
 }
