--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,7 @@
         "forceConsistentCasingInFileNames": true,
 
         "strict": true,
-        "skipLibCheck": true
+        "skipLibCheck": true,
+        "noUncheckedIndexedAccess": true
     }
 }
