--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,10 +17,10 @@ jobs:
       - name: Rename package name and version when develop build
         if: github.ref == 'refs/heads/develop'
         run: |
-          cat package.json | jq '.name+="-develop"' > package.json
-          cat package.json | jq .
-          cat package.json | jq ".version+=\"-$(git rev-parse HEAD)\"" > package.json
-          cat package.json | jq .
+          cat ./package.json | jq '.name+="-develop"' > ./package.json
+          cat ./package.json | jq .
+          cat ./package.json | jq ".version+=\"-$(git rev-parse HEAD)\"" > ./package.json
+          cat ./package.json | jq .
       - name: Install dependencies
         run: yarn install --frozen-lockfile
       - name: Build
