--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,6 +17,8 @@ jobs:
       - name: Rename package name and version when develop build
         if: github.ref == 'refs/heads/develop'
         run: |
+          ls
+          cat ./package.json | jq .
           cat ./package.json | jq '.name+="-develop"' > ./package.json
           cat ./package.json | jq .
           cat ./package.json | jq ".version+=\"-$(git rev-parse HEAD)\"" > ./package.json
