--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "@typescript-eslint/eslint-plugin": "^5.4.0",
         "@typescript-eslint/parser": "^5.4.0",
         "classnames": "^2.3.1",
+        "dayjs": "^1.10.7",
         "eslint": "^8.3.0",
         "eslint-config-prettier": "^8.3.0",
         "eslint-plugin-react": "^7.27.1",
