--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "@types/react": "^17.0.37",
         "@types/react-dom": "^17.0.11",
         "@types/react-modal": "^3.13.1",
+        "@types/tailwindcss": "^2.2.4",
         "@types/tampermonkey": "^4.0.5",
         "@typescript-eslint/eslint-plugin": "^5.4.0",
         "@typescript-eslint/parser": "^5.4.0",
