--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "@typescript-eslint/parser": "^5.4.0",
         "classnames": "^2.3.1",
         "dayjs": "^1.10.7",
+        "discord-webhook-ts": "^3.0.3",
         "eslint": "^8.3.0",
         "eslint-config-prettier": "^8.3.0",
         "eslint-plugin-react": "^7.27.1",
