--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
         "discord-webhook-ts": "^3.0.3",
         "eslint": "^8.3.0",
         "eslint-config-prettier": "^8.3.0",
+        "eslint-plugin-import-access": "^1.0.0",
         "eslint-plugin-react": "^7.27.1",
         "npm-run-all": "^4.1.5",
         "prettier": "^2.5.0",
