--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,8 @@
 
         "strict": true,
         "skipLibCheck": true,
-        "noUncheckedIndexedAccess": true
+        "noUncheckedIndexedAccess": true,
+
+        "plugins": [{ "name": "eslint-plugin-import-access" }]
     }
 }
