--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
         "watch": "rollup -wc",
         "serve": "serve ./dist",
         "lint": "eslint src --ext js,jsx,ts,tsx",
-        "lint:fix": "eslint src --ext js,jsx,ts,tsx",
+        "lint:fix": "eslint src --ext js,jsx,ts,tsx --fix",
         "format": "prettier src --check",
         "format:fix": "prettier src --write"
     },
