--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
         "eslint-config-prettier": "^8.3.0",
         "eslint-plugin-import-access": "^1.0.0",
         "eslint-plugin-react": "^7.27.1",
+        "mitt": "^3.0.0",
         "npm-run-all": "^4.1.5",
         "prettier": "^2.5.0",
         "prettier-plugin-tailwind": "^2.2.12",
