--- a/package.json
+++ b/package.json
@@ -34,10 +34,12 @@
         "eslint-plugin-react": "^7.27.1",
         "mitt": "^3.0.0",
         "npm-run-all": "^4.1.5",
+        "postcss": "^8.4.5",
         "prettier": "^2.5.0",
         "prettier-plugin-tailwind": "^2.2.12",
         "react-hook-form": "^7.20.4",
         "rollup": "^2.60.1",
+        "rollup-plugin-postcss": "^4.0.2",
         "rollup-plugin-userscript": "^0.1.1",
         "stylelint": "^14.1.0",
         "tailwindcss": "^2.2.19",
