--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "@headlessui/react": "^1.4.2",
         "@rollup/plugin-node-resolve": "^13.0.6",
         "@rollup/plugin-typescript": "^8.3.0",
+        "@tailwindcss/forms": "^0.4.0",
         "@types/chroma-js": "^2.1.3",
         "@types/lodash": "^4.14.177",
         "@types/react": "^17.0.37",
