--- a/.eslintrc
+++ b/.eslintrc
@@ -2,6 +2,7 @@
     "extends": [
         "eslint:recommended",
         "plugin:@typescript-eslint/recommended",
+        "plugin:@typescript-eslint/recommended-requiring-type-checking",
         "plugin:react/recommended",
         "prettier"
     ],
