--- a/LAOPLUS.csproj
+++ b/LAOPLUS.csproj
@@ -4,7 +4,7 @@
         <AssemblyName>net.laoplus.LAOPLUS</AssemblyName>
         <Product>LAOPLUS</Product>
         <VersionPrefix>2.0.0</VersionPrefix>
-        <VersionSuffix>alpha2</VersionSuffix>
+        <VersionSuffix></VersionSuffix>
         <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
         <LangVersion>latest</LangVersion>
         <DebugType>none</DebugType>
