--- a/.github/workflows/format.yml
+++ b/.github/workflows/format.yml
@@ -9,6 +9,18 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
+
       - name: Check code format with prettier
         run: |
           npx -y prettier . --check --ignore-path .gitignore
+
+  csharpier:
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v3
+
+      - name: Check code format with csharpier
+        run: |
+          dotnet tool restore
+          dotnet dotnet-csharpier --check .
