--- a/LAOPLUS.csproj
+++ b/LAOPLUS.csproj
@@ -8,7 +8,7 @@
         <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
         <LangVersion>latest</LangVersion>
         <DebugType>none</DebugType>
-        <PackageProjectUrl>https://github.com/eai04191/laoplus</PackageProjectUrl>
+        <PackageProjectUrl>https://github.com/laoplus/laoplus</PackageProjectUrl>
         <PackageReadmeFile>README.md</PackageReadmeFile>
         <RestoreAdditionalProjectSources>
             https://api.nuget.org/v3/index.json;
