--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,10 +19,10 @@ jobs:
         run: dotnet restore
 
       - name: Build
-        run: dotnet build --no-restore
+        run: dotnet build --no-restore --configuration Release ${{ github.workspace }}/LAOPLUS/LAOPLUS.csproj
 
       - name: Upload artifact
         uses: actions/upload-artifact@v3
         with:
-          path: /home/runner/work/laoplus/laoplus/bin/Debug/net6.0/net.laoplus.LAOPLUS.dll
+          path: ${{ github.workspace }}/LAOPLUS/bin/Release/net6.0/net.laoplus.LAOPLUS.dll
           if-no-files-found: error
