--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,8 +21,15 @@ jobs:
       - name: Build
         run: dotnet build --no-restore --configuration Release ${{ github.workspace }}/LAOPLUS/LAOPLUS.csproj
 
+      - name: Prepare artifact
+        run: |
+          cd ${{ github.workspace }}
+          mkdir Dist
+          cp -r Assets/ Dist/
+          cp LAOPLUS/bin/Release/net6.0/net.laoplus.LAOPLUS.dll Dist/
+
       - name: Upload artifact
         uses: actions/upload-artifact@v3
         with:
-          path: ${{ github.workspace }}/LAOPLUS/bin/Release/net6.0/net.laoplus.LAOPLUS.dll
+          path: ${{ github.workspace }}/Dist/
           if-no-files-found: error
